--- a/app/src/main/res/layout/item_food_cart.xml
+++ b/app/src/main/res/layout/item_food_cart.xml
@@ -36,7 +36,7 @@
             app:layout_constraintBottom_toTopOf="@id/tv_price_food"
             app:layout_constraintStart_toEndOf="@id/iv_order_food"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Pizza Paperoni" />
+            tools:text="@string/pizza_paperoni" />
 
         <TextView
             android:id="@+id/tv_price_food"
@@ -49,7 +49,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/iv_order_food"
             app:layout_constraintTop_toBottomOf="@id/tv_order_food_name"
-            tools:text="22.000" />
+            tools:text="@string/_22_000" />
 
         <ImageView
             android:id="@+id/iv_del"
@@ -158,7 +158,7 @@
                     app:layout_constraintStart_toEndOf="@id/tv_title_notes"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    tools:text="Fill your notes"/>
+                    tools:text="@string/fill_your_notes"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
