--- a/app/src/main/res/layout/item_section_product_chart.xml
+++ b/app/src/main/res/layout/item_section_product_chart.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Chart"
+        android:text="@string/chart"
         app:layout_constraintBottom_toTopOf="@id/line_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
