--- a/app/src/main/res/layout/item_linear_categories.xml
+++ b/app/src/main/res/layout/item_linear_categories.xml
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            tools:text="Nearby"
+            tools:text="@string/nearby"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
