--- a/app/src/main/res/layout/fragment_order_food_home.xml
+++ b/app/src/main/res/layout/fragment_order_food_home.xml
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="@string/username"
+                tools:text="@string/username"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/profile"
@@ -165,6 +165,14 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/item_linear_categories" />
 
+            <include
+                android:id="@+id/layout_state_category"
+                layout="@layout/layout_content_state"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -225,7 +233,7 @@
                 tools:listitem="@layout/item_linear_order_food" />
 
             <include
-                android:id="@+id/layout_state"
+                android:id="@+id/layout_state_order_food"
                 layout="@layout/layout_content_state"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
