--- a/app/src/main/res/layout/item_linear_order_food.xml
+++ b/app/src/main/res/layout/item_linear_order_food.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            tools:text="Pizza Paperoni"
+            tools:text="@string/pizza_paperoni"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/iv_order_food"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            tools:text="22.000"
+            tools:text="@string/_22_000"
             android:textColor="@color/orange"
             android:textSize="15sp"
             android:textStyle="bold"
