--- a/app/src/main/res/layout/activity_detail_order_food.xml
+++ b/app/src/main/res/layout/activity_detail_order_food.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            tools:text="Pizza Hut"
+            tools:text="@string/pizza_hut"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:lineHeight="25dp"
-            tools:text="Shrimps, squid rings, clams and mushroom on a bed of Pesto sauce, topped with Mozzarella cheese and basil"
+            tools:text="@string/shrimps_squid_rings_clams"
             android:textColor="@color/greyLight"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -249,7 +249,7 @@
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        tools:text="18.000" />
+                        tools:text="@string/_18_000" />
 
                 </LinearLayout>
 
