--- a/app/src/main/res/layout/item_section_total_order.xml
+++ b/app/src/main/res/layout/item_section_total_order.xml
@@ -36,7 +36,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_total_order"
-        tools:text="Rp 28.000"/>
+        tools:text="@string/rp_28_000"/>
 
     <ImageView
         android:layout_width="110dp"
